# pybash

./: .gitignore  CHANGELOG.md  README.md  changelog.py  pyproject.toml  setup.py
docs/: DEVELOP.rst  conf.py  contents.rst  index.rst  requirements.txt
examples/: complex_example.py  stepByStep.py  zconnect2Gradle.py
pybash/: __init__.py
runif/: __init__.py
src/: pybash.py
test/: test_ifmodified.py  test_run.py
