[tool.poetry]
name = "pybash"
version = "2.1.1"
description = ""
authors = ["Giovanni Giorgi <giovanni.giorgi@nttdata.com>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
